# tg-trnsm-bot

./: .env.example  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yml  mise.toml  pyproject.toml
.github/workflows/: release.yml  test.yml
tg_trnsm_bot/: app.py  context.py  menus.py  utils.py
transmission-telegram-bot/: app.py  config.py  menus.py  utils.py
transmission_telegram_bot/: app.py  config.py  logger.py  menus.py  utils.py
