[build-system]
build-backend = "hatchling.build"
requires = [ "hatchling" ]

[project]
name = "tg-trnsm-bot"
version = "0.1.0"
requires-python = ">=3.14,<4"
dependencies = [
  "python-dotenv>=1.2.1",
  "python-telegram-bot[job-queue]>=22.5",
  "structlog>=25.5",
  "transmission-rpc>=7.0.11",
]

[dependency-groups]
dev = [
  "mypy==1.19.1",
  "prek==0.2.24",
  "ruff==0.14.10",
]

[tool.uv]
default-groups = [ "dev" ]

[tool.ruff]
target-version = "py314"
line-length = 120

format.quote-style = "double"
lint.select = [
  "A",       # flake8-builtins
  "C90",     # flake8-complexity (mccabe)
  "E",       # pycodestyle errors
  "F",       # pyflakes
  "I",       # isort
  "N",       # pep8-naming
  "PLC0415", # import-outside-top-level
  "RUF",     # ruff
  "S",       # flake8-bandit
  "T20",     # flake8-print
  "UP",      # pyupgrade
  "W",       # pycodestyle warnings
]
lint.ignore = [
  "A003", # class attribute {name} is shadowing a python builtin
  "S101", # use of assert detected
  "S104", # possible binding to all interfaces (expected in Docker)
]

[tool.mypy]
python_version = "3.14"
strict = true
show_error_codes = true
no_implicit_optional = false
